[gd_scene load_steps=22 format=3 uid="uid://brr0c3xl05nib"]

[ext_resource type="Script" path="res://Scripts/Characters/Villains/TwigBlight.gd" id="1_r0jyh"]
[ext_resource type="Texture2D" uid="uid://dqiv1jqb5ciej" path="res://Assets/Characters/Villains/TwigBlightSprite.png" id="2_jxkgx"]
[ext_resource type="Texture2D" uid="uid://ckd1mtuus8hmb" path="res://Assets/Items/Props/healthbarProgress.png" id="3_osa30"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5dwgj"]
height = 20.0

[sub_resource type="Animation" id="Animation_6g1bw"]
resource_name = "Attack"
length = 0.57
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_kg34n"]
resource_name = "Die"
length = 0.53
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37]
}

[sub_resource type="Animation" id="Animation_megcn"]
resource_name = "Idle"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_sypg5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}

[sub_resource type="Animation" id="Animation_a02sg"]
resource_name = "Walk"
length = 0.73
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1ibi1"]
_data = {
"Attack": SubResource("Animation_6g1bw"),
"Die": SubResource("Animation_kg34n"),
"Idle": SubResource("Animation_megcn"),
"RESET": SubResource("Animation_sypg5"),
"Walk": SubResource("Animation_a02sg")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nrle1"]
animation = &"Die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ns86h"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_twhuo"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f63pb"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_07e25"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lybu5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s1jmg"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s5g54"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_coxkl"]
states/Die/node = SubResource("AnimationNodeAnimation_nrle1")
states/Die/position = Vector2(538, 178)
states/Idle/node = SubResource("AnimationNodeAnimation_ns86h")
states/Idle/position = Vector2(395, 100)
states/Walk/node = SubResource("AnimationNodeAnimation_twhuo")
states/Walk/position = Vector2(689, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_f63pb"), "Idle", "Die", SubResource("AnimationNodeStateMachineTransition_07e25"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_lybu5"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_s1jmg"), "Walk", "Die", SubResource("AnimationNodeStateMachineTransition_s5g54")]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vnit5"]
radius = 8.0
height = 113.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l04h6"]
radius = 17.0
height = 36.0

[node name="TwigBlight" type="CharacterBody2D" groups=["Enemies"]]
position = Vector2(85, 51)
scale = Vector2(2.2, 2.2)
collision_layer = 8
collision_mask = 3
script = ExtResource("1_r0jyh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.5, -10)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_jxkgx")
hframes = 8
vframes = 5
frame = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_5dwgj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1ibi1")
}
autoplay = "Walk"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_coxkl")
anim_player = NodePath("../AnimationPlayer")

[node name="TwigBlightLife" type="TextureProgressBar" parent="."]
offset_left = -19.0
offset_top = -16.0
offset_right = 45.0
offset_bottom = -6.0
scale = Vector2(0.6, 0.6)
value = 100.0
texture_progress = ExtResource("3_osa30")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(3, -7)
rotation = 1.5708
scale = Vector2(2.62337, 1.20213)
shape = SubResource("CapsuleShape2D_vnit5")

[node name="Movimento" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0.5, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_l04h6")

[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="timeout" from="Movimento" to="." method="_on_movimento_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
